--- a/code/documentation/assets/template.html
+++ b/code/documentation/assets/template.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" id="template">
     <head>
         <title>Documentation Site Template</title>
+        <meta name="robots" content="noindex"/>
         <link rel="stylesheet" href="css/documentation.css"/>
     </head>
     <body>
         <main>
             <nav>
-                <h2>Table of Contents</h2>
-                <span id="openClose"/>
                 <ul>
                     <li>Thing 1
                         <ul>
@@ -111,5 +110,6 @@
         <div id="popup" class="hidden">
             <div id="popup_content"/>
         </div>
+        <script src="js/documentation.js"></script>
     </body>
 </html>
