--- a/code/documentation/assets/template.html
+++ b/code/documentation/assets/template.html
@@ -94,6 +94,9 @@
                </ul>
            </nav>
            <main>
+               <nav class="searchBar">
+                   <input type="text" placeholder="🔍 Search..." minlength="3"/>
+               </nav>
                <article>
                    <h2>Content Title</h2>
                    <p>Texas tea. The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the millionaire and his wife. Makin their way the only way they know how. That's just a little bit more than the law will allow. Just two good ol' boys Never meanin' no harm. Beats all you've ever saw been in trouble with the law since the day they was born. The year is 1987 and NASA launches the last of Americas deep space probes., These days are all Happy and Free. These days are all share them with me oh baby.</p>
